1.2-DEV2:
- Fixed message post format name when using /unnamepost
- Fixed /postlist not showing any post
- Fixed issue with /visit inputting the names with an space at the end "Agua " instead of "Agua"
- Fixed issue with /visit and underscores
1.2-DEV3:
- Fixed message recieved when using /unnamepost and /namepost
- Fixed /namepost naming posts with multiple words
- Got rid of "multiple-names-per-post" config option
1.3-DEV1:
- Fixed /visit and /unnamepost tab completion when it was a multi-word post name
- Solved using casing on /visit, now "/visit Agua" and "/visit agua" are the same
1.3-DEV2:
- Redid /postlist