@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'org.example'
-version '1.3-DEV2'
+version '1.3-DEV3'
 
 shadowJar{
     minimize()
