@@ -8,6 +8,7 @@ import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.EventPriority;
 import org.bukkit.event.Listener;
+import org.bukkit.event.entity.EntityAirChangeEvent;
 import org.bukkit.event.player.PlayerMoveEvent;
 
 import java.util.ArrayList;
@@ -25,16 +26,26 @@ public class onPlayerMove implements Listener {
         // Prevent first fall damage after teleport
         if(blockFall.contains(player.getUniqueId().toString())){
 
-
-
             Entity entity = Bukkit.getEntity(player.getUniqueId());
             if(entity==null){
                 return;
+            }
+            if(entity.isOnGround()){
+                blockFall.remove(player.getUniqueId().toString());
             }
             Material material = player.getLocation().getBlock().getType();
             if(material== Material.WATER||material==Material.LAVA){
                 blockFall.remove(player.getUniqueId().toString());
             }
         }
+    }
+    public void onEntityMove(EntityAirChangeEvent e){
+        if(e.getEntity().getLocation().getBlock().isLiquid()){
+            for(Player p : Bukkit.getOnlinePlayers()){
+                p.sendMessage("we");
+            }
+        }
+
+
     }
 }
