@@ -87,6 +87,7 @@ public class Visit implements CommandExecutor{
             for(String post : warpNames){
                 if(postID.equalsIgnoreCase(post)){
                     postID = post;
+                    postName = PostAPI.idToName(post);
                     condition = true;
                     break;
                 }
