@@ -1,5 +1,5 @@
 main: muriplz.telepost.Telepost
-version: 1.3-DEV2
+version: 1.3-DEV3
 name: Telepost
 description: Posts to keep people connected!
 author: MuriPlz
